5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4187/executions/1716_2507.log
== TEST (2019-05-10 00:21:00) 
-- CODE:
QIPir = int(input("Quantidade inicial de pirarucus no tamque:"))
cresPir = int(input("Percentual de crescimento mensal da quantidade de pirarucus no tamque:")/100

meses = 0
QPir = QIPir
while(QPir > 0 and QPir < 8000):
	PirVenMes = int(input("Quantidade de pirarucus retirado pra venda por mes:"))
	QPir = QPir + (QPir * cresPir )
	QPir = QPir - PirVenMes
	meses = meses + 1
	if(QPir <= 0):
		print("zero".upper())
	elif(QPir >= 8000):
		print("maximo".upper())
print(meses)
-- ERROR:
File "XXXX", line 4
    meses = 0
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 00:21:29) 
-- CODE:
QIPir = int(input("Quantidade inicial de pirarucus no tamque:"))
cresPir = int(input("Percentual de crescimento mensal da quantidade de pirarucus no tamque:")/100

meses = 0
QPir = QIPir
while(QPir > 0 and QPir < 8000):
	PirVenMes = int(input("Quantidade de pirarucus retirado pra venda por mes:"))
	QPir = QPir + (QPir * cresPir )
	QPir = QPir - PirVenMes
	meses = meses + 1
	if(QPir <= 0):
		print("zero".upper())
	elif(QPir >= 8000):
		print("maximo".upper())
print(meses)
-- ERROR:
File "XXXX", line 4
    meses = 0
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 00:22:08) 
-- CODE:
QIPir = int(input("Quantidade inicial de pirarucus no tamque:"))
cresPir = int(input("Percentual de crescimento mensal da quantidade de pirarucus no tamque:")/100

mes = 0
QPir = QIPir
while(QPir > 0 and QPir < 8000):
	PirVenMes = int(input("Quantidade de pirarucus retirado pra venda por mes:"))
	QPir = QPir + (QPir * cresPir )
	QPir = QPir - PirVenMes
	meses = meses + 1
	if(QPir <= 0):
		print("zero".upper())
	elif(QPir 
-- ERROR:
File "XXXX", line 4
    mes = 0
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 00:22:08) 
-- CODE:
QIPir = int(input("Quantidade inicial de pirarucus no tamque:"))
cresPir = int(input("Percentual de crescimento mensal da quantidade de pirarucus no tamque:")/100

mes = 0
QPir = QIPir
while(QPir > 0 and QPir < 8000):
	PirVenMes = int(input("Quantidade de pirarucus retirado pra venda por mes:"))
	QPir = QPir + (QPir * cresPir )
	QPir = QPir - PirVenMes
	meses = meses + 1
	if(QPir <= 0):
		print("zero".upper())
	elif(QPir >= 8000):
		print("maximo".upper())
print(meses)
-- ERROR:
File "XXXX", line 4
    mes = 0
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 00:38:23) 
-- CODE:
quant = int(input("quantidade de irarucus"))
per = int(input("percentual"))/100

meses = 0
while(quant > 0 and quant < 8000):
	PirVenMes = int(input("Quantidade de pirarucus retirado pra venda por mes:"))
	quant = quant + (quant * per )
	quant = quant - PirVenMes
	meses = meses + 1
	if(quant <= 0):
		print("zero".upper())
	elif(quant >= 8000):
		print("maximo".upper())
print(meses)
-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 00:38:58) 
-- CODE:
quant = int(input("quantidade de irarucus"))
per = int(input("percentual"))/100

meses = 0
while(quant > 0 and quant < 8000):
	PirVenMes = int(input("Quantidade de pirarucus retirado pra venda por mes:"))
	quant = quant + (quant * per )
	quant = quant - PirVenMes
	meses = meses + 1
	if(quant <= 0):
		print("zero".upper())
	elif(quant >= 8000):
		print("maximo".upper())
print(meses)
-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 00:39:19) 
-- CODE:
quant = int(input("quantidade de irarucus"))
per = int(input("percentual"))/100

meses = 0
while(quant > 0 and quant < 8000):
	PirVenMes = int(input("Quantidade de pirarucus retirado pra venda por mes:"))
	quant = quant + (quant * per )
	quant = quant - PirVenMes
	meses = meses + 1
	if(quant <= 0):
		print("zero".upper())
	elif(quant >= 8000):
		print("maximo".upper())
print(meses)
-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 00:39:41) 
-- CODE:
quant = int(input("quantidade de irarucus"))
per = int(input("percentual"))/100

meses = 0
while(quant > 0 and quant < 8000):
	PirVenMes = int(input("Quantidade de pirarucus retirado pra venda por mes:"))
	quant = quant + (quant * per )
	quant = quant - PirVenMes
	meses = meses + 1
	if(quant <= 0):
		print("zero".upper())
	elif(quant >= 8000):
		print("maximo".upper())
print(meses)
-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 00:44:10) 
-- CODE:
QIP = int(input("quantidade de inicial de piraruucus:"))
PCM = int(input("percentual"))/100

meses = 0
while(QIP > 0 and QIP < 8000):
	PirVenMes = int(input("Quantidade de pirarucus retirado para venda por mes:"))
	QIP = QIP + (QIP * PCM )
	QIP = QIP - PirVenMes
	meses = meses + 1
	if(QIP <= 0):
		print("zero".upper())
	elif(QIP >= 8000):
		print("maximo".upper())
print(meses)
-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-10 00:45:41) 
-- CODE:
QIP = int(input("quantidade de inicial de piraruucus:"))
PCM = int(input("percentual de crescimento mensal no tamque de pirarucus:"))/100

meses = 0
while(QIP > 0 and QIP < 8000):
	PirVenMes = int(input("Quantidade de pirarucus retirado para venda por mes:"))
	QIP = QIP + (QIP * PCM )
	QIP = QIP - PirVenMes
	meses = meses + 1
	if(QIP <= 0):
		print("zero".upper())
	elif(QIP >= 8000):
		print("maximo".upper())
print(meses)
-- EXECUTION TIME:
0.177228
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
3
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
MAXIMO
7
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
